--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "bin": "./cli.js",
   "dependencies": {
+    "fs-extra": "^7.0.1",
     "jimp": "^0.6.0",
     "simple-git": "^1.107.0"
   }
