--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "fs-extra": "^7.0.1",
     "jimp": "^0.6.0",
-    "simple-git": "^1.107.0"
+    "simple-git": "^1.107.0",
+    "yargs": "^12.0.5"
   },
   "description": "Cycle through a Git log and output a .png of the diff of each file in each commit.",
   "homepage": "https://github.com/RobertAKARobin/diffshot-js",
