--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "simple-git": "^1.107.0",
     "yargs": "^12.0.5"
   },
-  "description": "Cycle through a Git log and output a .png of the diff of each file in each commit.",
+  "description": "Loop through a Git log and output a .png of the diff of each file in each commit.",
   "homepage": "https://github.com/RobertAKARobin/diffshot-js",
   "license": "ISC",
   "name": "diffshot",
