--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Robin Thomas <contact@robertakarobin.com> (https://www.robertakarobin.com)",
-  "bin": "./index.js",
+  "bin": "./cli.js",
   "dependencies": {
     "fs-extra": "^7.0.1",
     "jimp": "^0.6.0",
@@ -11,5 +11,5 @@
   "homepage": "https://github.com/RobertAKARobin/diffshot",
   "license": "MIT",
   "name": "diffshot",
-  "version": "1.0.4"
+  "version": "1.0.5"
 }
